envia para deixar guardado
